--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
-wrapper, select, input, button {
+wrapper,
+select,
+input,
+button {
     font-family: "Indie Flower", cursive;
     font-weight: 400;
     font-style: normal;
@@ -12,13 +15,71 @@ h2 {
     font-size: 3vh;
 }
 
-button {
-    width: 10vw;
-    height: 3vh;
-}
 
-select, input {
+
+select,
+input {
     width: 40vw;
     height: 3vh;
 }
 
+
+/* CSS */
+button {
+    width: 30vw;
+    height: 5vh;
+
+    background-color: #fbeee0;
+    border: 2px solid #422800;
+    border-radius: 30px;
+    box-shadow: #422800 4px 4px 0 0;
+    color: #422800;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0 18px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+button:hover {
+    background-color: #fff;
+}
+
+button:active {
+    box-shadow: #422800 2px 2px 0 0;
+    transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+    button {
+        min-width: 120px;
+        padding: 0 25px;
+    }
+}
+
+
+body {
+  padding: 30px;
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+select {
+    background-color: #fbeee0;
+}
+
+select option:hover {
+    background-color: #ffcc00; /* Change this to the desired hover color */
+    color: #333; /* Change this to the desired text color on hover */
+}
