--- a/css/aboutstyles.css
+++ b/css/aboutstyles.css
@@ -91,8 +91,7 @@ h1 {
 }
 
 header h1 {
-    font-size: 7vh;
-    margin: 0;
+    font-size: 5vh;
     animation-duration: 3s;
     animation-name: slidein1;
 }
@@ -159,9 +158,12 @@ header {
     display: flex;
     flex-wrap: wrap;
     border-radius: 25px;
-    height: 30vh;
-    width: 40vw;
+    position: absolute;
+    top:200px;
+    height: 10vh;
+    width: 50vw;
     margin: 12%;
+   
     padding-left: 20px;
     color: white;
     background: rgba(189, 201, 227, 0.908);
@@ -278,6 +280,7 @@ select {
     header {
         display: flex;
         flex-wrap: wrap;
+        margin: auto;
         border-radius: 25px;
         margin: 6%;
         padding-left: 20px;
