--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,23 @@ header {
     background-color: #fbeee0;
 }
 
+#content .card {
+    width: 33vw;
+    height: 10vh;
+    background-color: white;
+}
+
+#content .card image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+
+
+#filters {
+    border-bottom: dotted rgb(67, 52, 57);
+}
+
 header a {
     border-radius: 30px;
     height: 3vh;
