--- a/css/styles.css
+++ b/css/styles.css
@@ -189,10 +189,11 @@ header {
     background-color: white;
 }
 
+
+
 .cardsmall img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+ 
+    border-radius: 50%;
 }
 
 
