--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,8 @@ header {
 
 header a {
     border-radius: 30px;
-    height: 3vh;
+    height: 4vh;
+    width: 10vw;
     margin: auto;
     background-color: #54856d;
 
@@ -301,11 +302,13 @@ select {
         flex-wrap: wrap;
         border-radius: 25px;
         margin: 6%;
+        height: 35vh;
         padding-left: 20px;
     }
 
     header a {
         margin: 0;
+        width: 10vw;
         height: 5vh;
         background-color: #54856d;
 
